doc(api): documentation on parameters
