# src/configs/swagger-output.json
@@ -201,16 +201,20 @@
         "description": "Endpoint para crear una invitación.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la invitación",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "example@gmail.com"
                 },
                 "projectId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -234,16 +238,20 @@
         "description": "Endpoint para validar una invitación.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la invitación",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "token": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "eak182mane1"
                 },
                 "userId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -267,16 +275,20 @@
         "description": "Endpoint para enviar una invitación a un proyecto por correo.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la invitación",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "example@gmail.com"
                 },
                 "projectId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -304,6 +316,13 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "path",
+            "description": "Token de la invitación",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -318,7 +337,10 @@
     },
     "/api/projects/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para crear un proyecto.",
         "parameters": [
           {
             "name": "body",
@@ -330,6 +352,53 @@
                   "example": "any"
                 },
                 "descripcion": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obtener todos los proyectos.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/projects/id": {
+      "post": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obtener un proyecto por id.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
                   "example": "any"
                 }
               }
@@ -344,22 +413,14 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
     "/api/projects/user": {
       "post": {
-        "description": "",
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obtener un proyecto por id de usuario.",
         "parameters": [
           {
             "name": "body",
@@ -392,16 +453,20 @@
         "description": "Endpoint para registrar una fuente.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la fuente",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nombre": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Fuente"
                 },
                 "precio": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 100
                 }
               }
             }
@@ -423,13 +488,16 @@
         "description": "Endpoint para eliminar una fuente.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la fuente",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -451,19 +519,24 @@
         "description": "Endpoint para actualizar una fuente.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la fuente",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nombre": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Fuente"
                 },
                 "precio": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 100
                 },
                 "id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -640,31 +713,40 @@
         "description": "Endpoint para registrar una recompensa.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "projectId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 },
                 "iconoId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 },
                 "nombre": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Recompensa"
                 },
                 "descripcion": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Descripción de la recompensa"
                 },
                 "precio": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 100
                 },
                 "cantidad": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 10
                 },
                 "limite": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 5
                 }
               }
             }
@@ -686,13 +768,16 @@
         "description": "Endpoint para eliminar una recompensa.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -714,31 +799,40 @@
         "description": "Endpoint para actualizar una recompensa.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "iconoId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 },
                 "nombre": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Recompensa"
                 },
                 "descripcion": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Descripción de la recompensa"
                 },
                 "precio": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 100
                 },
                 "cantidad": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 10
                 },
                 "limite": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 5
                 },
                 "id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -757,10 +851,62 @@
         "tags": [
           "Custom Rewards"
         ],
-        "description": "Endpoint para obtener todas las recompens",
+        "description": "Endpoint para obtener todas las recompensas personalizadas.",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/rewards/{userId}/{projectId}": {
+      "get": {
+        "tags": [
+          "Custom Rewards"
+        ],
+        "description": "Endpoint para obtener todas las recompensas de un proyecto para un usuario en la tienda.",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "type": "number",
+                  "example": 123456
+                },
+                "projectId": {
+                  "type": "number",
+                  "example": 123456
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -773,13 +919,16 @@
         "description": "Endpoint para obtener una recompensa por id.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
@@ -803,13 +952,16 @@
         "description": "Endpoint para obtener todas las recompensas de un proyecto.",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Datos de la recompensa",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "projectId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 123456
                 }
               }
             }
